--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
+  <link rel="manifest" href="manifest.json">
   <link rel="icon" type="image/x-icon" href="logo t.png"> 
   <link rel="stylesheet" href="style.css">
   <script type="module">
@@ -15,7 +16,7 @@
 </head>
 <body>
   <header class="site-header">
-     <nav>
+    <nav>
       <a href="index.html" class="logo">
         <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
       </a>
@@ -23,134 +24,44 @@
         <a href="products.html">Products</a>
         <a href="status.html">Order Status</a>
         <a href="admin.html">Admin</a>
+        <input id="search-input" type="search" placeholder="Search products..." style="padding: 6px 10px; border-radius: 8px; border: 1px solid #e5e7eb; margin-left: 14px;">
+        <a href="cart.html" id="cart-link">Cart <span id="cart-count">0</span></a>
+        <button id="dark-mode-toggle">Toggle Dark Mode</button>
+        <a href="login.html">Login/Register</a>
       </div>
-      <button id="cart-btn" class="cart-btn">Cart <span id="cart-count">(0)</span></button>
     </nav>
   </header>
 
  <main class="container">
-    <h1>Welcome to The Geek Shop</h1>
+    <div class="hero-banner" style="background: #e8e8ff; padding: 40px; text-align: center; border-radius: 12px; margin-bottom: 20px;">
+      <h1>Welcome to The Geek Shop</h1>
+      <p>Your one-stop shop for geek accessories in Bangladesh. Shop now for keycaps, switches, and more!</p>
+      <button onclick="window.location.href='products.html'">Shop Now</button>
+    </div>
 
     <h2>May Interest You</h2>
     <div id="interest-products" class="product-list new-hot-list"></div>
 
     <h2>Categories</h2>
     <div id="categories" class="product-list new-hot-list"></div>
+
+    <h2>Testimonials</h2>
+    <div class="testimonials" style="display: grid; gap: 16px; grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));">
+      <div class="card">
+        <p>"Great products and fast delivery!" - Customer 1</p>
+      </div>
+      <div class="card">
+        <p>"Love the keycaps!" - Customer 2</p>
+      </div>
+    </div>
   </main>
 
-  <div id="cart-sidebar" class="cart-sidebar">
-    <div class="cart-header">
-      <h2>Cart</h2>
-      <button id="close-cart">×</button>
-    </div>
-    <div id="cart-items"></div>
-    <div id="cart-totals"></div>
-    <button id="cart-checkout">Checkout</button>
-  </div>
-
   <div id="image-viewer" class="image-viewer">
-    <button id="close-viewer" class="close-viewer">×</button>
+    <button id="close-viewer" class="close-viewer">&times;</button>
     <img id="viewer-img" src="" alt="">
   </div>
 
-  <div id="checkout-modal" class="modal">
-    <div class="card modal-content">
-      <div class="modal-header">
-        <h2>Checkout</h2>
-        <button id="close-modal-btn">×</button>
-      </div>
-      <form id="checkout-form" class="form">
-        <div id="co-items-list" class="co-items-list"></div>
-        <input type="hidden" id="co-product-id">
-        <div class="row single-only">
-          <div>
-            <label>Product Name</label>
-            <input id="co-product-name" readonly>
-          </div>
-          <div>
-            <label>Color</label>
-            <input id="co-color" readonly>
-          </div>
-        </div>
-        <div class="row single-only">
-          <div>
-            <label>Price (tk)</label>
-            <input id="co-price" readonly>
-            <input type="hidden" id="co-unit-price-raw">
-            <input type="hidden" id="co-available-stock">
-          </div>
-          <div>
-            <label>Quantity</label>
-            <input id="co-qty" type="number" min="1" value="1">
-          </div>
-        </div>
-        <div class="row">
-          <div>
-            <label>Delivery</label>
-            <input id="co-delivery" readonly>
-          </div>
-          <div>
-            <label>Total (tk)</label>
-            <input id="co-total" readonly>
-          </div>
-        </div>
-        <div class="row">
-          <div>
-            <label>Name</label>
-            <input id="co-name" required>
-          </div>
-          <div>
-            <label>Phone</label>
-            <input id="co-phone" type="tel" required>
-          </div>
-        </div>
-        <div>
-          <label>Address</label>
-          <textarea id="co-address" required></textarea>
-        </div>
-        <div class="row">
-          <div>
-            <label>Payment Method</label>
-            <select id="co-payment" required>
-              <option value="">Select</option>
-              <option value="Cash on Delivery">Cash on Delivery</option>
-              <option value="Bkash">Bkash</option>
-            </select>
-          </div>
-          <div>
-            <label>Pay to (Send money)</label>
-            <input id="co-payment-number" readonly>
-          </div>
-        </div>
-        <div class="row">
-          <div>
-            <label>Pay Now (tk)</label>
-            <input id="co-pay-now" readonly>
-          </div>
-          <div>
-            <label>Due Amount (tk)</label>
-            <input id="co-due-amount" readonly>
-          </div>
-        </div>
-        <div>
-          <label>Transaction ID</label>
-          <input id="co-txn">
-        </div>
-        <div>
-          <label>
-            <input type="checkbox" id="co-policy" required>
-            I agree to the <a href="status.html">Order Policy</a>
-          </label>
-        </div>
-        <div>
-          <p id="co-note" class="muted"></p>
-        </div>
-        <button id="place-order-btn" type="submit">Place Order</button>
-      </form>
-    </div>
-  </div>
-
-<footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color: #000000; font-family: Arial, sans-serif;">
+<footer style="background-color: #e8e8ff; padding: 20px; text-align: center; color: #000000; font-family: Arial, sans-serif;">
   <div>
     <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
       <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
@@ -162,7 +73,13 @@
       <img src="whatsapp.png" alt="WhatsApp" style="width: 30px; height: 30px;">
     </a>
   </div>
+  <h3>Newsletter</h3>
+  <form id="newsletter-form" style="max-width: 400px; margin: 0 auto;">
+    <input type="email" placeholder="Your email" required style="padding: 10px; width: 70%; border-radius: 8px; border: 1px solid #e5e7eb;">
+    <button type="submit" style="padding: 10px;">Subscribe</button>
+  </form>
   <p>&copy; All rights reserved by The Geek Shop</p>
+  <a href="blog.html">Blog</a>
 </footer>
 </body>
 </html>
