--- a/login.html
+++ b/login.html
@@ -4,34 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login/Register</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" type="image/x-icon" href="logo t.png"> 
+  <link rel="stylesheet" href="style.css">
+  <script type="module" src="script.js"></script>
 </head>
 <body>
-  <header class="header">
-    <div class="logo">Keyboard Shop</div>
-    <nav class="nav">
-      <a href="index.html">Home</a>
-      <a href="cart.html">Cart</a>
+  <header class="site-header">
+    <nav>
+      <a href="index.html" class="logo">
+        <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
+      </a>
+      <div class="nav-links">
+        <a href="products.html">Products</a>
+        <a href="status.html">Order Status</a>
+        <a href="admin.html">Admin</a>
+      </div>
     </nav>
   </header>
-  <section>
-    <h2>Register</h2>
-    <form id="registerForm">
-      <input id="phone" placeholder="Phone Number" required>
-      <input id="email" type="email" placeholder="Email" required>
-      <input id="address" placeholder="Address" required>
-      <input id="password" type="password" placeholder="Password" required>
-      <button type="submit" class="button">Register</button>
-    </form>
-    <h2>Login</h2>
-    <form id="loginForm">
-      <input id="loginId" placeholder="Email or Phone" required>
-      <input id="password" type="password" placeholder="Password" required>
-      <button type="submit" class="button">Login</button>
-    </form>
-  </section>
-  <footer>© 2025 Keyboard Shop</footer>
-  <script type="module" src="js/firebase.js"></script>
-  <script type="module" src="js/auth.js"></script>
+
+ <main class="container">
+    <div class="card">
+      <h2>Login</h2>
+      <form id="login-form-user" class="form">
+        <input type="email" id="user-email" required placeholder="Email">
+        <input type="password" id="user-pass" required placeholder="Password">
+        <button type="submit">Login</button>
+      </form>
+      <h2>Register</h2>
+      <form id="register-form" class="form">
+        <input type="email" id="reg-email" required placeholder="Email">
+        <input type="password" id="reg-pass" required placeholder="Password">
+        <button type="submit">Register</button>
+      </form>
+    </div>
+  </main>
+
+  <footer> (same as above) </footer>
 </body>
 </html>
