--- a/products.html
+++ b/products.html
@@ -6,176 +6,38 @@
   <title>Products</title>
   <link rel="icon" type="image/x-icon" href="logo t.png"> 
   <link rel="stylesheet" href="style.css">
-  <script type="module">
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
-    import { getAuth } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js';
-    import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
-  </script>
   <script type="module" src="script.js"></script>
-<!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '655776497078930');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
 </head>
 <body>
-  <header class="site-header">
-     <nav>
-      <a href="index.html" class="logo">
-        <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
-      </a>
-      <div class="nav-links">
-        <a href="products.html">Products</a>
-        <a href="status.html">Order Status</a>
-        <a href="admin.html">Admin</a>
-      </div>
-      <button id="cart-btn" class="cart-btn">Cart <span id="cart-count">(0)</span></button>
-    </nav>
-  </header>
+  <header class="site-header"> (same as updated index.html) </header>
 
- <main class="container">
-    <h1 id="products-title">Products</h1>
-    
-    <div id="product-list" class="product-list"></div>
+ <main class="container products">
+    <div id="filters" class="sidebar card">
+      <h3>Filters</h3>
+      <div>
+        <label>Price Min</label>
+        <input id="filter-price-min" type="number" placeholder="Min">
+      </div>
+      <div>
+        <label>Price Max</label>
+        <input id="filter-price-max" type="number" placeholder="Max">
+      </div>
+      <div id="color-filters"></div>
+      <div id="availability-filters"></div>
+      <label><input type="checkbox" id="filter-hot-deal"> Hot Deals Only</label>
+      <button id="apply-filters">Apply</button>
+    </div>
+    <div class="main-content">
+      <h1 id="products-title">Products</h1>
+      <div id="product-list" class="product-list"></div>
+    </div>
   </main>
 
-  <div id="cart-sidebar" class="cart-sidebar">
-    <div class="cart-header">
-      <h2>Cart</h2>
-      <button id="close-cart">×</button>
-    </div>
-    <div id="cart-items"></div>
-    <div id="cart-totals"></div>
-    <button id="cart-checkout">Checkout</button>
-  </div>
-
   <div id="image-viewer" class="image-viewer">
-    <button id="close-viewer" class="close-viewer">×</button>
+    <button id="close-viewer" class="close-viewer">&times;</button>
     <img id="viewer-img" src="" alt="">
   </div>
 
-  <div id="checkout-modal" class="modal">
-    <div class="card modal-content">
-      <div class="modal-header">
-        <h2>Checkout</h2>
-        <button id="close-modal-btn">×</button>
-      </div>
-      <form id="checkout-form" class="form">
-        <div id="co-items-list" class="co-items-list"></div>
-        <input type="hidden" id="co-product-id">
-        <div class="row single-only">
-          <div>
-            <label>Product Name</label>
-            <input id="co-product-name" readonly>
-          </div>
-          <div>
-            <label>Color</label>
-            <input id="co-color" readonly>
-          </div>
-        </div>
-        <div class="row single-only">
-          <div>
-            <label>Price (tk)</label>
-            <input id="co-price" readonly>
-            <input type="hidden" id="co-unit-price-raw">
-            <input type="hidden" id="co-available-stock">
-          </div>
-          <div>
-            <label>Quantity</label>
-            <input id="co-qty" type="number" min="1" value="1">
-          </div>
-        </div>
-        <div class="row">
-          <div>
-            <label>Delivery</label>
-            <input id="co-delivery" readonly>
-          </div>
-          <div>
-            <label>Total (tk)</label>
-            <input id="co-total" readonly>
-          </div>
-        </div>
-        <div class="row">
-          <div>
-            <label>Name</label>
-            <input id="co-name" required>
-          </div>
-          <div>
-            <label>Phone</label>
-            <input id="co-phone" type="tel" required>
-          </div>
-        </div>
-        <div>
-          <label>Address</label>
-          <textarea id="co-address" required></textarea>
-        </div>
-        <div class="row">
-          <div>
-            <label>Payment Method</label>
-            <select id="co-payment" required>
-              <option value="">Select</option>
-              <option value="Cash on Delivery">Cash on Delivery</option>
-              <option value="Bkash">Bkash</option>
-            </select>
-          </div>
-          <div>
-            <label>Pay to (Send money)</label>
-            <input id="co-payment-number" readonly>
-          </div>
-        </div>
-        <div class="row">
-          <div>
-            <label>Pay Now (tk)</label>
-            <input id="co-pay-now" readonly>
-          </div>
-          <div>
-            <label>Due Amount (tk)</label>
-            <input id="co-due-amount" readonly>
-          </div>
-        </div>
-        <div>
-          <label>Transaction ID</label>
-          <input id="co-txn">
-        </div>
-        <div>
-          <label>
-            <input type="checkbox" id="co-policy" required>
-            I agree to the <a href="status.html">Order Policy</a>
-          </label>
-        </div>
-        <div>
-          <p id="co-note" class="muted"></p>
-        </div>
-        <button id="place-order-btn" type="submit">Place Order</button>
-      </form>
-    </div>
-  </div>
-
-<footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color: #000000; font-family: Arial, sans-serif;">
-  <div>
-    <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-      <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
-    </a>
-    <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-      <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
-    </a>
-    <a href="https://wa.me/01960902526" target="_blank" style="margin: 0 10px;">
-      <img src="whatsapp.png" alt="WhatsApp" style="width: 30px; height: 30px;">
-    </a>
-  </div>
-  <p>&copy; All rights reserved by The Geek Shop</p>
-</footer>
+<footer> (same) </footer>
 </body>
 </html>
