--- a/cart.html
+++ b/cart.html
@@ -17,7 +17,92 @@
     <div id="cart-total" class="price"></div>
     <button id="checkout-cart">Checkout</button>
   </main>
+<div id="checkout-modal" class="modal">
+  <div class="card modal-content">
+    <div class="modal-header">
+      <h2>Checkout</h2>
+      <button id="close-modal-btn">Close</button>
+    </div>
+    <form id="checkout-form" class="form">
+      <div id="checkout-items"></div>
+      <div class="row">
+        <div>
+          <label>Delivery</label>
+          <input id="co-delivery" readonly>
+        </div>
+        <div>
+          <label>Total (tk)</label>
+          <input id="co-total" readonly>
+        </div>
+      </div>
+      <div class="row">
+        <div>
+          <label>Name</label>
+          <input id="co-name" required>
+        </div>
+        <div>
+          <label>Phone</label>
+          <input id="co-phone" type="tel" required>
+        </div>
+      </div>
+      <div>
+        <label>Address</label>
+        <textarea id="co-address" required></textarea>
+      </div>
+      <div class="row">
+        <div>
+          <label>Payment Method</label>
+          <select id="co-payment" required>
+            <option value="">Select</option>
+            <option value="Cash on Delivery">Cash on Delivery</option>
+            <option value="Bkash">Bkash</option>
+          </select>
+        </div>
+        <div>
+          <label>Pay to (Send money)</label>
+          <input id="co-payment-number" readonly>
+        </div>
+      </div>
+      <div class="row">
+        <div>
+          <label>Pay Now (tk)</label>
+          <input id="co-pay-now" readonly>
+        </div>
+        <div>
+          <label>Due Amount (tk)</label>
+          <input id="co-due-amount" readonly>
+        </div>
+      </div>
+      <div>
+        <label>Transaction ID</label>
+        <input id="co-txn">
+      </div>
+      <div>
+        <label>
+          <input type="checkbox" id="co-policy" required>
+          I agree to the <a href="status.html">Order Policy</a>
+        </label>
+      </div>
+      <div>
+        <p id="co-note" class="muted"></p>
+      </div>
+      <button id="place-order-btn" type="submit">Place Order</button>
+    </form>
+  </div>
+</div>
 
+<div id="cart-modal" class="modal">
+  <div class="card modal-content">
+    <div class="modal-header">
+      <h2>Cart</h2>
+      <button id="close-cart-btn">Close</button>
+    </div>
+    <div id="cart-items"></div>
+    <div id="cart-total-modal" class="price"></div>
+    <button id="checkout-from-cart">Checkout</button>
+  </div>
+</div>
 <footer> (same) </footer>
 </body>
+
 </html>
