--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="status.html">Order Status</a>
         <a href="admin.html">Admin</a>
         <input id="search-input" type="search" placeholder="Search products..." style="padding: 6px 10px; border-radius: 8px; border: 1px solid #e5e7eb; margin-left: 14px;">
-        <a href="cart.html" id="cart-link">Cart <span id="cart-count">0</span></a>
+        <a href="#" id="cart-link">Cart <span id="cart-count">0</span></a>
         <button id="dark-mode-toggle">Toggle Dark Mode</button>
         <a href="login.html">Login/Register</a>
       </div>
@@ -44,21 +44,20 @@
 
     <h2>Categories</h2>
     <div id="categories" class="product-list new-hot-list"></div>
-
-    <h2>Testimonials</h2>
-    <div class="testimonials" style="display: grid; gap: 16px; grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));">
-      <div class="card">
-        <p>"Great products and fast delivery!" - Customer 1</p>
-      </div>
-      <div class="card">
-        <p>"Love the keycaps!" - Customer 2</p>
-      </div>
-    </div>
   </main>
 
   <div id="image-viewer" class="image-viewer">
     <button id="close-viewer" class="close-viewer">&times;</button>
     <img id="viewer-img" src="" alt="">
+  </div>
+
+  <!-- Cart Sidebar -->
+  <div id="cart-sidebar" class="cart-sidebar">
+    <button id="close-cart-sidebar" class="close-cart">&times;</button>
+    <h2>My Cart</h2>
+    <div id="cart-items"></div>
+    <div id="cart-total" class="price"></div>
+    <button id="checkout-cart">Checkout</button>
   </div>
 
 <footer style="background-color: #e8e8ff; padding: 20px; text-align: center; color: #000000; font-family: Arial, sans-serif;">
