--- a/product.html
+++ b/product.html
@@ -16,7 +16,7 @@
   <script type="module" src="script.js"></script>
 </head>
 <body>
-   <header class="site-header">
+  <header class="site-header">
     <nav>
       <a href="index.html" class="logo">
         <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
@@ -26,7 +26,7 @@
         <a href="status.html">Order Status</a>
         <a href="admin.html">Admin</a>
         <input id="search-input" type="search" placeholder="Search products..." style="padding: 6px 10px; border-radius: 8px; border: 1px solid #e5e7eb; margin-left: 14px;">
-        <a href="cart.html" id="cart-link">Cart <span id="cart-count">0</span></a>
+        <a href="#" id="cart-link">Cart <span id="cart-count">0</span></a>
         <button id="dark-mode-toggle">Toggle Dark Mode</button>
         <a href="login.html">Login/Register</a>
       </div>
@@ -86,7 +86,6 @@
         <button id="close-modal-btn">Close</button>
       </div>
       <form id="checkout-form" class="form">
-        <!-- Updated to handle multi-items: loop over items -->
         <div id="checkout-items"></div>
         <div class="row">
           <div>
@@ -154,19 +153,34 @@
     </div>
   </div>
 
-  <div id="cart-modal" class="modal">
-    <div class="card modal-content">
-      <div class="modal-header">
-        <h2>Cart</h2>
-        <button id="close-cart-btn">Close</button>
-      </div>
-      <div id="cart-items"></div>
-      <div id="cart-total-modal" class="price"></div>
-      <button id="checkout-from-cart">Checkout</button>
-    </div>
+  <!-- Cart Sidebar (added to all pages, but init handles) -->
+  <div id="cart-sidebar" class="cart-sidebar">
+    <button id="close-cart-sidebar" class="close-cart">&times;</button>
+    <h2>My Cart</h2>
+    <div id="cart-items"></div>
+    <div id="cart-total" class="price"></div>
+    <button id="checkout-cart">Checkout</button>
   </div>
 
-  <footer> (same as updated index.html, with newsletter) </footer>
+  <footer style="background-color: #e8e8ff; padding: 20px; text-align: center; color: #000000; font-family: Arial, sans-serif;">
+    <div>
+      <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
+        <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
+      </a>
+      <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
+        <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
+      </a>
+      <a href="https://wa.me/01960902526" target="_blank" style="margin: 0 10px;">
+        <img src="whatsapp.png" alt="WhatsApp" style="width: 30px; height: 30px;">
+      </a>
+    </div>
+    <h3>Newsletter</h3>
+    <form id="newsletter-form" style="max-width: 400px; margin: 0 auto;">
+      <input type="email" placeholder="Your email" required style="padding: 10px; width: 70%; border-radius: 8px; border: 1px solid #e5e7eb;">
+      <button type="submit" style="padding: 10px;">Subscribe</button>
+    </form>
+    <p>&copy; All rights reserved by The Geek Shop</p>
+    <a href="blog.html">Blog</a>
+  </footer>
 </body>
-
 </html>
