--- a/product.html
+++ b/product.html
@@ -204,6 +204,7 @@
         <button id="cart-place-order-btn" type="submit">Place Order</button>
       </form>
     </div>
+    <p id="cart-co-note" class="muted"></p>
   </div>
 
 <footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color: #000000; font-family: Arial, sans-serif;">
@@ -223,3 +224,4 @@
 </body>
 
 </html>
+
