--- a/products.html
+++ b/products.html
@@ -66,6 +66,17 @@ src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
     <div id="cart-empty" class="muted" style="text-align:center; padding:20px; display:none;">Your cart is empty</div>
   </div>
 
+
+  <!-- Cart Slider -->
+  <div id="cart-slider" class="cart-slider">
+    <button id="close-cart" class="close-viewer">&times;</button>
+    <h2>Shopping Cart</h2>
+    <div id="cart-items" class="cart-items"></div>
+    <div id="cart-total" class="cart-total"><strong>Total: ৳0</strong></div>
+    <button id="checkout-cart" class="checkout-cart-btn">Checkout</button>
+    <div id="cart-empty" class="muted" style="text-align:center; padding:20px; display:none;">Your cart is empty</div>
+  </div>
+
   <!-- Cart Checkout Modal -->
   <div id="cart-checkout-modal" class="modal">
     <div class="card modal-content">
@@ -98,11 +109,13 @@ src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
           <div><label>Pay Now (tk)</label><input id="cart-co-pay-now" readonly></div>
           <div><label>Due Amount (tk)</label><input id="cart-co-due-amount" readonly></div>
         </div>
-        <div><label>Transaction ID (if prepaid)</label><input id="cart-co-txn"></div>
+        <div><label>Transaction ID</label><input id="cart-co-txn"></div>
         <div><label><input type="checkbox" id="cart-co-policy" required> I agree to the <a href="status.html">Order Policy</a></label></div>
+          <p id="cart-co-note" class="muted"></p>
         <button id="cart-place-order-btn" type="submit">Place Order</button>
       </form>
     </div>
+  
   </div>
 
 <footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color:  #000000; font-family: Arial, sans-serif;">
@@ -120,4 +133,5 @@ src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
   <p>&copy; All rights reserved by The Geek Shop</p>
 </footer>
 </body>
+
 </html>
